# dwipy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.py
common/: FindPython.cmake  GetGSL.cmake  config.cmake
dwipy/: setup.py
dwipy/core/: DWImage.py  DWImage4D.py  image2D.py  image3D.py  makefile  setup.py
dwipy/core/include/images/: DWImage.h  DWImage4D.h  Image.h  Image3D.h
dwipy/core/include/interface/: DWImage4DInterface.h  DWImageInterface.h
dwipy/core/src/images/: DWImage.cpp  DWImage4D.cpp
dwipy/core/src/interface/: DWImage4DInterface.cpp  DWImageInterface.cpp  Image3DInterface.cpp  Interface.cpp
dwipy/dwi/models/: IVIM.py  MEM.py  setup.py
dwipy/dwi/models/include/interface/: DWIModelInterface.h
dwipy/dwi/models/src/interface/: Interface.cpp
dwipy/math/include/linalg/: Matrix.h  Vector3.h
dwipy/math/src/regression/: LinearRegression.cpp  test.cpp
dwipy/misc/: funcHelper.py  sysHelper.py
examples/: Basics.ipynb  DCE.ipynb  DWI.ipynb  Math.ipynb  Radiomics.ipynb
src/dwipy/: CMakeLists.txt
src/dwipy/core/: DWImage.py  DWImage4D.py  image3D.py
src/dwipy/core/include/generic/: Object.h
src/dwipy/core/include/images/: Image2D.h
src/dwipy/core/include/interface/: Image3DInterface.h
src/dwipy/core/src/generic/: Object.cpp
src/dwipy/core/src/images/: Image.cpp  Image2D.cpp  Image3D.cpp
src/dwipy/core/src/interface/: Interface.cpp
src/dwipy/dwi/models/: IVIM.py  MEM.py  makefile
src/dwipy/dwi/models/include/: IVIM.h  MEM.h
src/dwipy/dwi/models/src/: IVIM.cpp  MEM.cpp
src/dwipy/dwi/models/src/interface/: DWIModelInterface.cpp
src/dwipy/math/include/regression/: CurveFit.h  LinearRegression.h
src/dwipy/math/src/linalg/: test.cpp
src/dwipy/math/src/regression/: CurveFit.cpp  test.cpp
src/dwipy/misc/: funcHelper.py
