[build-system]
requires = ["setuptools>=61.0", "numpy>=1.21", "nibabel>=4.0", "pynrrd>=1.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "--cov=dwipy"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "dwipy"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true